// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`returns product name 1`] = `
Object {
  "data": Object {
    "products": Array [
      Object {
        "name": "Hello World",
      },
      Object {
        "name": "Hello World",
      },
    ],
  },
}
`;

exports[`returns user name and email 1`] = `
Object {
  "data": Object {
    "users": Array [
      Object {
        "email": "Hello World",
        "name": "Hello World",
      },
      Object {
        "email": "Hello World",
        "name": "Hello World",
      },
    ],
  },
}
`;
